<resources>
    <string name="app_name">Car Service</string>
    <string name="button_sign_up">Sign Up</string>
    <string name="button_sign_up_informative">Not a user? Sign Up</string>
    <string name="button_sign_in">Sign In</string>
    <string name="button_sign_in_informative">Already a user? Sign In</string>
    <string name="tab_title_recent_services">Recent Services</string>
    <string name="tab_title_find_services">Find Services</string>
    <string name="tab_title_request_service">Request Service</string>
    <string name="button_expand_search_fields">Tap to find services</string>
    <string name="location">Location</string>
    <string name="required_services">Required Services</string>
    <string name="required_service_car_wash">Car Wash</string>
    <string name="required_service_tyre_repair">Tyre Repair</string>
    <string name="required_service_air_cond_refill"><![CDATA[Air Conditioner Repair & Refill]]></string>
    <string name="required_service_tuning">Tuning</string>
    <string name="menu_item_profile">Profile</string>
    <string name="menu_item_about">About</string>
    <string name="find_service_button">Find</string>
    <string name="clear_fields_button">Clear Fields</string>
    <string name="search_location_button_hint">Tap to search&#8230;</string>
    <string name="dismiss">Dismiss</string>
    <string name="service_details_available_services">Provided Services: %s</string>
    <string name="sign_up_title">Sign Up</string>
    <string name="register_user_type_client">Client</string>
    <string name="register_user_type_service_provider">Service Provider</string>
    <string name="register_user_type_client_caption">Find and request services.</string>
    <string name="register_user_type_service_provider_caption">Offer services and manage your service.</string>
    <string name="register_prompt">Who are you?</string>
    <string name="register_prompt_caption">Let us know who you are to provide the right experience for you.</string>
    <string name="register_login_details_prompt">Setup login</string>
    <string name="register_login_details_caption">This info will be used to login to our services.</string>
    <string name="previous_button">Previous</string>
    <string name="next_button">Next</string>
    <string name="finish_button">Finish</string>
    <string name="hint_name">Name:</string>
    <string name="hint_email">Email Address:</string>
    <string name="register_user_details_client_prompt">Setup vehicle info</string>
    <string name="register_user_details_client_caption">Let us know more about your vehicle.\nThis step is optional and you can complete it later.</string>
    <string name="register_user_details_client_vehicle_make">Make:</string>
    <string name="register_user_details_client_vehicle_model">Model:</string>
    <string name="register_user_details_client_vehicle_year">Year:</string>
    <string name="register_user_details_client_vehicle_engine_displacement">Engine Displacement:</string>
    <string name="user_name_error_message">Please enter a name</string>
    <string name="user_email_error_message">Please enter a valid email address</string>
    <string name="user_incorrect_email_error_message">Incorrect email address</string>
    <string name="user_password_error_message">Incorrect password</string>
    <string name="no_services">No services to show.</string>
    <string name="service_contat_details_dialog_title">Contact</string>
    <string name="submit_rating_dialog_title">Submit Rating</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_submit">Submit</string>
    <string name="leave_message_dialog_title">Leave a Message</string>
    <string name="leave_message_hint">Leave a short message:</string>
    <string name="leave_message_empty_error">Please enter a message</string>
    <string name="leave_message_too_long">Message can\'t be longer than %1$d characters</string>
    <string name="leave_message_not_different_error">Message must be different for an update"</string>
    <string name="sign_in_prompt">Welcome</string>
    <string name="hint_password">Password:</string>
    <string name="register_user_details_provider_prompt">Setup service info</string>
    <string name="register_user_type_provider_caption">Add your service so costumers can discover it.</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="active_time">Active Time</string>
    <string name="set_opening_time">Set opening time</string>
    <string name="set_closing_time">Set closing time</string>
    <string name="service_name">Service Name</string>
    <string name="services">Services</string>
    <string name="vehicle_types">Vehicle Types</string>
    <string name="vehicle_type_private">Private</string>
    <string name="vehicle_type_truck">Truck</string>
    <string name="vehicle_type_bus">Bus</string>
    <string name="vehicle_type_motorcycle">Motorcycle</string>
    <string name="director_phone_number">Director Phone Number</string>
    <string name="photo">Photo</string>
    <string name="browse_button">Tap to browse...</string>
    <string name="director_name">Director Name</string>
    <string name="open_time_not_set_message">Please set opening time first</string>
    <string name="open_time_earlier_equal_message">Closing time cannot be earlier than or equal to open time</string>
    <string name="remove">Remove</string>
    <string name="profile_activity_title">Manage Profile</string>
    <string name="done">Done</string>
    <string name="edit">Edit</string>
    <string name="editing_enabled_messeage">Editing enabled</string>
    <string name="discarding_changes_message">Discarding changes.</string>
    <string name="saving_changes_message">Changes saved.</string>
    <string name="undo">UNDO</string>
    <string name="general">General</string>
    <string name="change_password_button">Change Password</string>
    <string name="vehicle_details">Vehicle Details</string>
    <string name="update">Update</string>
    <string name="hint_password_current">Current Password:</string>
    <string name="hint_password_new">New Password:</string>
    <string name="hint_password_confirm">Confirm Password:</string>
    <string name="enable_editing_required_message">Please enable editing.</string>
    <string name="data_still_loading_message">Data still loading, please wait.</string>
    <string name="post_tender_activity_title">Post Service Request</string>
    <string name="post_request">Post Request</string>
    <string name="failed_location_search">Couldn\'t acquire your current location.</string>
    <string name="location_permission_denied">Location services are required to get your current location.</string>
    <string name="enable">Enable</string>
    <string name="active_tender_request_title">Current Tender Request</string>
    <string name="tender_request_message">Requesting %1$s for %2$s.</string>
    <string name="tender_reply_title">Reply From: %1$s</string>
    <string name="deadline_title">Deadline</string>
    <string name="tap_to_set">Tap to set</string>
    <string name="date_too_early_message">Date can\'t be earlier than today</string>
    <string name="status_title">Status</string>
    <string name="opened_title">Opened</string>
    <string name="closed_title">Closed</string>
    <string name="resolved_title">Resolved</string>
    <string name="deadline_with_date">Deadline: %1$s</string>
    <string name="incomplete_fields_message">Please fill all the fields</string>
    <string name="service_details_title">Service Details</string>
    <string name="loading_progress_title">Loading…</string>
    <string name="loading_message">Loading… please wait.</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="reply_title">Reply</string>
    <string name="tender_request_title">Tender Request</string>
    <string name="send_title">Send</string>
    <string name="refresh_title">Refresh</string>
    <string name="reply_to_tender_request_dialog_title">Are you sure you want to send this message?</string>
    <string name="reply_to_tender_request_dialog_message">Your message: %1$s</string>
    <string name="inbox_title">Inbox</string>
    <string name="tender_requests_title">Tender Requests</string>
    <string name="no_tender_requests_to_show">No tender requests to show.</string>
    <string name="no_messages_to_show">No messages to show.</string>
    <string name="message_time_format_prefix_yesterday">Yesterday,</string>
    <string name="sign_out_title">Sign Out</string>
    <string name="not_signed_in_title">Not Signed In</string>
    <string name="home_title">Home</string>
    <string name="auto_service_title">Auto Service</string>
    <string name="tyre_repair_title">Tyre Repair</string>
    <string name="car_wash_title">Car Wash</string>
    <string name="towing_title">Towing</string>
    <string-array name="service_types">
        <item>@string/all_title</item>
        <item>@string/auto_service_title</item>
        <item>@string/tyre_repair_title</item>
        <item>@string/car_wash_title</item>
        <item>@string/towing_title</item>
    </string-array>
    <string name="reviews_title">Reviews</string>
    <string name="tap_to_filter_button">Tap to filter services</string>
    <string name="tap_to_view_work_types_button">Tap to view work types</string>
    <string name="review_title">%1$s rated %2$s</string>
    <string name="no_reviews">No reviews to show.</string>
    <string name="all_title">All</string>
    <string name="vehicle_makes_title">Vehicle Makes</string>
    <string name="tap_to_view_vehicle_makes_button">Tap to view vehicle makes</string>
    <string name="tap_to_search_hint">Tap to search...</string>
    <string name="work_type_body_work">Body Work</string>
    <string name="work_type_engine_diagnosis_repair">Engine Diagnosis &amp; Repair</string>
    <string name="work_type_chassis">Chassis</string>
    <string name="work_type_ppc">PPC</string>
    <string name="work_type_planned_to">Planned To</string>
    <string name="work_type_electrics">Electrics</string>
    <string name="work_type_steering_gear">Steering Gear</string>
    <string name="work_type_exhaust_system">Exhaust System</string>
    <string name="work_type_optional_equipment">Optional Equipment</string>
    <string name="sub_work_type_aerography">Aerography</string>
    <string name="sub_work_type_painting">Painting</string>
    <string name="sub_work_type_polish">Polish</string>
    <string name="sub_work_type_body_repair">Body Repair</string>
    <string name="sub_work_type_color_selection">Color Selection</string>
    <string name="sub_work_type_bumper_repair">Bumper Repair</string>
    <string name="sub_work_type_remove_chips">Remove Chips</string>
    <string name="sub_work_type_anti_corrosion_treatment">Anti-Corrosion Treatment</string>
    <string name="sub_work_type_computer_diagnostics">Computer Diagnostics</string>
    <string name="sub_work_type_engine_repair">Engine Repair</string>
    <string name="sub_work_type_diesel_engine_repair">Diesel Engine Repair</string>
    <string name="sub_work_type_overhaul">Overhaul</string>
    <string name="sub_work_type_carburettors_repair">Carburettors Repair</string>
    <string name="sub_work_type_injectors_repair">Injectors Repair</string>
    <string name="sub_work_type_cooling_system_repair">Cooling System Repair</string>
    <string name="sub_work_type_undercarriage_diagnostics">Undercarriage Diagnostics</string>
    <string name="sub_work_type_alignment">Alignment</string>
    <string name="sub_work_type_gearbox_diagnosis">Gearbox Diagnosis</string>
    <string name="sub_work_type_manual_transmission_repair">Manual Transmission Repair</string>
    <string name="sub_work_type_automatic_transmission_repair">Automatic Transmission Repair</string>
</resources>