<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/group_general"
        android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_menu_item_home"
            app:showAsAction="never"
            android:title="@string/home_title"/>
    </group>
    <group
        android:id="@+id/group_services"
        android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_menu_item_auto_service"
            app:showAsAction="never"
            android:title="@string/auto_service_title"/>
        <item
            android:id="@+id/drawer_menu_item_tyre_repair"
            app:showAsAction="never"
            android:title="@string/tyre_repair_title"/>
        <item
            android:id="@+id/drawer_menu_item_car_wash"
            app:showAsAction="never"
            android:title="@string/car_wash_title"/>
        <item
            android:id="@+id/drawer_menu_item_towing"
            app:showAsAction="never"
            android:title="@string/towing_title"/>
    </group>
    <group
        android:id="@+id/group_utilities"
        android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_menu_item_reviews"
            app:showAsAction="never"
            android:title="@string/reviews_title"/>
        <item
            android:id="@+id/drawer_menu_item_requests"
            app:showAsAction="never"
            android:title="@string/tab_title_request_service"/>
    </group>
    <group
        android:id="@+id/group_account"
        android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_menu_item_sign_in"
            app:showAsAction="never"
            android:title="@string/button_sign_in"/>
        <item
            android:id="@+id/drawer_menu_item_sign_up"
            app:showAsAction="never"
            android:title="@string/sign_up_title"/>

        <item
            android:id="@+id/drawer_menu_item_profile"
            app:showAsAction="never"
            android:title="@string/menu_item_profile"/>
        <item
            android:id="@+id/drawer_menu_item_sign_out"
            app:showAsAction="never"
            android:title="@string/sign_out_title"/>
    </group>
    <group
        android:id="@+id/group_other"
        android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_menu_item_about"
            app:showAsAction="never"
            android:title="@string/menu_item_about"/>
    </group>
</menu>