<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.menuexample.MenuExampleActivity">

    <item
        android:id="@+id/menu_item_profile"
        android:orderInCategory="1"
        app:showAsAction="never"
        android:title="@string/menu_item_profile"/>

    <item
        android:id="@+id/menu_item_about"
        android:orderInCategory="2"
        app:showAsAction="never"
        android:title="@string/menu_item_about"/>
    <item
        android:id="@+id/menu_item_refresh"
        android:orderInCategory="3"
        app:showAsAction="never"
        android:title="@string/refresh_title" />
</menu>