<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/find_service_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_vertical_margin"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/search_city_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/item_spacing"
            android:background="@drawable/transparent_background_interactive"
            android:drawableLeft="@drawable/places_ic_search"
            android:drawableStart="@drawable/places_ic_search"
            android:drawablePadding="@dimen/item_spacing"
            android:gravity="start|center_vertical"
            android:text="@string/search_location_button_hint"
            android:textColor="?attr/colorAccent"
            android:textAllCaps="false"
            android:textSize="20sp"/>
        <TextView
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/required_services"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/show_work_types_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/item_spacing"
            android:background="@drawable/transparent_background_interactive"
            android:paddingLeft="@dimen/item_spacing"
            android:paddingRight="@dimen/item_spacing"
            android:gravity="start|center_vertical"
            android:text="@string/tap_to_view_work_types_button"
            android:textColor="?attr/colorAccent"
            android:textAllCaps="false"
            android:textSize="20sp"/>
        <com.hotmail.maximglukhov.arrangedlayout.ArrangedLayout
            android:id="@+id/services_arranged_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vehicle_types"
            android:textSize="20sp"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                android:id="@+id/car_type_private_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vehicle_type_private"/>
            <RadioButton
                android:id="@+id/car_type_motorcycle_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vehicle_type_motorcycle"/>
            <RadioButton
                android:id="@+id/car_type_bus_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vehicle_type_bus"/>
            <RadioButton
                android:id="@+id/car_type_truck_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vehicle_type_truck"/>
        </RadioGroup>
        <TextView
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vehicle_makes_title"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/show_vehicle_makes_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/item_spacing"
            android:background="@drawable/transparent_background_interactive"
            android:paddingLeft="@dimen/item_spacing"
            android:paddingRight="@dimen/item_spacing"
            android:gravity="start|center_vertical"
            android:text="@string/tap_to_view_vehicle_makes_button"
            android:textColor="?attr/colorAccent"
            android:textAllCaps="false"
            android:textSize="20sp"/>
        <com.hotmail.maximglukhov.arrangedlayout.ArrangedLayout
            android:id="@+id/vehicle_makes_arranged_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/item_spacing"
            android:orientation="horizontal"
            android:gravity="center"
            android:weightSum="3">
            <Button
                android:id="@+id/find_services_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/transparent_background_interactive"
                android:text="@string/find_service_button"
                android:textColor="?attr/colorAccent"
                android:textAllCaps="false"/>
            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/collapse_search_fields_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/transparent_background_interactive"
                android:src="@drawable/ic_expand_less_black_24dp"/>
            <Button
                android:id="@+id/clear_search_fields_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/transparent_background_interactive"
                android:text="@string/clear_fields_button"
                android:textColor="?attr/colorAccent"
                android:textAllCaps="false"/>
        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>