<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical">

    <TextView
        android:text="@string/register_prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@color/colorAccent"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_spacing"
        android:gravity="center"
        android:text="@string/register_prompt_caption"
        android:textSize="16sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

    <LinearLayout
        android:id="@+id/client_option_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:paddingTop="@dimen/item_spacing"
        android:paddingBottom="@dimen/item_spacing"
        android:background="@drawable/registration_option_button_background"
        android:orientation="vertical"
        android:clickable="true">
        <TextView
            android:id="@+id/client_option_title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/register_user_type_client"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
        <TextView
            android:id="@+id/client_option_caption_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/register_user_type_client_caption"
            android:textSize="14sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/service_provider_option_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_spacing"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/item_spacing"
        android:background="@drawable/registration_option_button_background"
        android:orientation="vertical"
        android:clickable="true">
        <TextView
            android:id="@+id/provider_option_title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/register_user_type_service_provider"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
        <TextView
            android:id="@+id/provider_option_caption_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/register_user_type_service_provider_caption"
            android:textSize="14sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/next_step_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_forward_white_24dp"
            android:clickable="true"
            android:visibility="invisible"/>
    </LinearLayout>

    <Button
        android:id="@+id/navgiate_to_sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_sign_in_informative"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:background="@drawable/transparent_background_interactive"
        android:layout_gravity="bottom"/>
</LinearLayout>
