<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/register_user_details_client_vehicle_make"
        android:textSize="20sp"/>
    <Button
        android:id="@+id/show_vehicle_makes_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/item_spacing"
        android:background="@drawable/transparent_background_interactive"
        android:paddingLeft="@dimen/item_spacing"
        android:paddingRight="@dimen/item_spacing"
        android:gravity="start|center_vertical"
        android:text="@string/tap_to_view_vehicle_makes_button"
        android:textColor="?attr/colorAccent"
        android:textAllCaps="false"
        android:textSize="20sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/register_user_details_client_vehicle_model"
        android:textSize="20sp"/>
    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/vehicle_model_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Base.Widget.AppCompat.Spinner.Underlined">
    </android.support.v7.widget.AppCompatSpinner>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/vehicle_year_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/year_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/register_user_details_client_vehicle_year"
            android:textSize="20sp"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/vehicle_engine_displacement_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/engine_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/register_user_details_client_vehicle_engine_displacement"
            android:textSize="20sp"/>
    </android.support.design.widget.TextInputLayout>
</LinearLayout>